--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,11 +1,43 @@
-body{
-    background-color: #ecf2f6;
+body {
+  background-color: #ecf2f6;
 }
 
 .logo {
-    max-width: 128px;
+  max-width: 128px;
 }
+
 .login-section {
-    background-color: #fff;
-    border-radius: 10px;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+.btn-linkedin {
+  background: #0E76A8;
+  color: #fff;
+}
+
+.btn-linkedin:link,
+.btn-linkedin:visited {
+  color: #fff;
+}
+
+.btn-linkedin:active,
+.btn-linkedin:hover {
+  background: #084461;
+  color: #fff;
+}
+
+.avatar {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background-size: contain;
+}
+
+#loader {
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
 }
